# FastApi-Course

class-01/: pyproject.toml
class-01/src/todos/: main.py
class-02/: pyproject.toml
class-02/src/student_app/: main.py
class-03/: pyproject.toml
class-04/: pyproject.toml
class-04/src/todo_app/: main.py
class-05/: main.py  pyproject.toml
class-06/: README.md  pyproject.toml
class-06/src/practice_project/: main.py
class-06/src/practice_project/routes/: user_routes.py
class-07/: main.py  pyproject.toml
class-08/: main.py  pyproject.toml
class-08/routes/: user_routes.py
class09/: .env  pyproject.toml
class09/src/class09/: main.py
class09/src/class09/config/: db_connection.py
class09/src/class09/routes/: todo_routes.py
class10/: pyproject.toml  sql_queries.txt
