[project]
name = "todo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Hafiz-Zuhaib-Dev",email = "hafizzuhaibazaad457@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]
[tool.poetry.scripts]
dev='todo_app.main:start'

[tool.poetry]
packages = [{include = "todo_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
